--- a/styles.css
+++ b/styles.css
@@ -2,3 +2,28 @@
     min-height: 50vh;
     border: solid 1px black;
 }
+
+.parent1 {
+    border: solid 1px red;
+    background-color: white;
+}
+
+
+.square {
+    width: 50px;
+    height: 50px;
+}
+
+.offsetsquare {
+    margin-left: 25px;
+    margin-top: -25px;
+    z-index: 1;
+}
+
+.box1 {
+    background-color: black;
+}
+
+.box2 {
+    background-color: blue;
+}
