--- a/styles.css
+++ b/styles.css
@@ -1,16 +1,24 @@
 .standard-section {
-    min-height: 50vh;
     border: solid 1px black;
+    padding: 20px;
 }
 
 .parent1 {
-    border: solid 1px red;
+    border: solid 1px black;
     background-color: white;
+
+    display: flex;
+    justify-content: space-around;
 }
 
 
 .square {
     width: 50px;
+    height: 50px;
+}
+
+.rect {
+    width: 150px;
     height: 50px;
 }
 
@@ -26,4 +34,20 @@
 
 .box2 {
     background-color: blue;
+}
+
+.filter-blur {
+filter: blur(3px);
+}
+
+.filter-blur1 {
+    filter: blur(1px);
+    }
+
+.filter-grayscale {
+    filter: grayscale(.9);
+}
+
+.filter-blur-grayscale {
+filter: blur(1px) grayscale(.9);
 }
