--- a/styles.css
+++ b/styles.css
@@ -51,3 +51,14 @@ filter: blur(3px);
 .filter-blur-grayscale {
 filter: blur(1px) grayscale(.9);
 }
+
+
+
+.filter-brightness {
+    filter: brightness(.5);
+}
+
+
+.filter-contrast {
+    filter: contrast(2);
+}
