--- a/styles.css
+++ b/styles.css
@@ -62,3 +62,28 @@ filter: blur(1px) grayscale(.9);
 .filter-contrast {
     filter: contrast(2);
 }
+
+.filter-hue-rotate {
+filter: hue-rotate(269deg);
+}
+
+.filter-invert {
+filter: invert(100%);
+}
+
+.filter-opacity {
+    opacity: 0.2;
+    }
+
+
+.filter-box-shadow {
+    box-shadow: 40px 5px 0px 1px #000;
+    }
+
+.filter-saturate {
+    filter: saturate(300%);
+    }
+
+.filter-sepia {
+    filter: sepia(100%);
+    }
